// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StepItem rendering tests disconnected step - not start, no incoming edges - shows warning - test 1`] = `
<div>
  <div
    class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary border-l-[3px] border-l-orange-400"
    data-testid="step"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-2"
      >
        <span
          class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
        >
          1
          .
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 shrink-0 text-xs"
          data-slot="badge"
          data-testid="end-badge"
        >
          Ende
        </span>
        <span
          class="truncate text-sm font-medium"
        >
          Test Schritt
        </span>
      </div>
      <div
        class="flex items-center"
      >
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
            data-slot="dropdown-menu-trigger"
            data-testid="more-options-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
    >
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
        data-testid="type-badge"
      >
        Eigenständig
      </span>
      <span
        class="font-medium text-orange-600"
      >
        · Nicht verbunden
      </span>
    </div>
  </div>
</div>
`;

exports[`StepItem rendering tests isSelected true - test 1`] = `
<div>
  <div
    class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary border-primary ring-1 ring-primary"
    data-testid="step"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-2"
      >
        <span
          class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
        >
          1
          .
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-primary-foreground [a&]:hover:bg-primary/90 shrink-0 bg-blue-600 text-xs hover:bg-blue-600"
          data-slot="badge"
          data-testid="start-badge"
        >
          Start
        </span>
        <span
          class="truncate text-sm font-medium"
        >
          step-title-1
        </span>
      </div>
      <div
        class="flex items-center"
      >
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
            data-slot="dropdown-menu-trigger"
            data-testid="more-options-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
    >
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
        data-testid="type-badge"
      >
        Eigenständig
      </span>
    </div>
    <div
      class="mt-2 flex flex-wrap gap-1"
    >
      <span
        class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
      >
        Weiter
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-right h-3 w-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
        <span
          class="max-w-20 truncate"
        >
          ?
        </span>
      </span>
      <span
        class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
      >
        Abbrechen
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-right h-3 w-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
        <span
          class="max-w-20 truncate"
        >
          ?
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`StepItem rendering tests isStart false - test 1`] = `
<div>
  <div
    class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary border-l-[3px] border-l-orange-400"
    data-testid="step"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-2"
      >
        <span
          class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
        >
          1
          .
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 shrink-0 text-xs"
          data-slot="badge"
          data-testid="end-badge"
        >
          Ende
        </span>
        <span
          class="truncate text-sm font-medium"
        >
          step-title-1
        </span>
      </div>
      <div
        class="flex items-center"
      >
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
            data-slot="dropdown-menu-trigger"
            data-testid="more-options-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
    >
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
        data-testid="type-badge"
      >
        Eigenständig
      </span>
      <span
        class="font-medium text-orange-600"
      >
        · Nicht verbunden
      </span>
    </div>
  </div>
</div>
`;

exports[`StepItem rendering tests isStart true - test 1`] = `
<div>
  <div
    class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary"
    data-testid="step"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-2"
      >
        <span
          class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
        >
          1
          .
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-primary-foreground [a&]:hover:bg-primary/90 shrink-0 bg-blue-600 text-xs hover:bg-blue-600"
          data-slot="badge"
          data-testid="start-badge"
        >
          Start
        </span>
        <span
          class="truncate text-sm font-medium"
        >
          step-title-1
        </span>
      </div>
      <div
        class="flex items-center"
      >
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
            data-slot="dropdown-menu-trigger"
            data-testid="more-options-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
    >
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
        data-testid="type-badge"
      >
        Prompt
      </span>
    </div>
    <div
      class="mt-2 flex flex-wrap gap-1"
    >
      <span
        class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
      >
        Weiter
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-right h-3 w-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
        <span
          class="max-w-20 truncate"
        >
          ?
        </span>
      </span>
      <span
        class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
      >
        Abbrechen
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-right h-3 w-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
        <span
          class="max-w-20 truncate"
        >
          ?
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`StepItem rendering tests step with edges - renders edge list - test 1`] = `
<div>
  <div
    class="cursor-pointer rounded-lg border bg-white p-3 transition-colors hover:border-primary"
    data-testid="step"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex min-w-0 flex-1 items-center gap-2"
      >
        <span
          class="w-5 shrink-0 text-right font-mono text-xs text-muted-foreground"
        >
          1
          .
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-primary-foreground [a&]:hover:bg-primary/90 shrink-0 bg-blue-600 text-xs hover:bg-blue-600"
          data-slot="badge"
          data-testid="start-badge"
        >
          Start
        </span>
        <span
          class="truncate text-sm font-medium"
        >
          Erster Schritt
        </span>
      </div>
      <div
        class="flex items-center"
      >
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 h-6 w-6"
            data-slot="dropdown-menu-trigger"
            data-testid="more-options-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-1.5 flex flex-wrap items-center gap-1.5 text-xs text-muted-foreground"
    >
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
        data-testid="type-badge"
      >
        Eigenständig
      </span>
    </div>
    <div
      class="mt-2 flex flex-wrap gap-1"
    >
      <span
        class="inline-flex items-center gap-1 rounded-full bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
      >
        Ja
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-right h-3 w-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
        <span
          class="max-w-20 truncate"
        >
          Zweiter Schritt
        </span>
      </span>
    </div>
  </div>
</div>
`;
